# mcp-azure-devops

./: .gitignore  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  TROUBLESHOOTING.md  WIKI_HELPER_GUIDE.md  glama.json  pyproject.toml  validate_setup.py
mcp_azure_devops/: azure_devops_client.py  server.py
